2017-03-08  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_crypto.c (tls_prf): Replace the seed with
	the concatenation of the label and the seed.

2017-03-06  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/pluginscheduler.c (plugin_add): Change the message
	to a more appropriate one after check if dep_oid is null.

2017-03-06  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_text_utils.c (nasl_display): Fix g_message() call.

2017-03-04  Christian Fischer  <christian.fischer@greenbone.net>

	* src/attack.c (apply_hosts_preferences),
	src/hosts.c (hosts_stop_host),
	src/ntp.c (ntp_parse_input):
	Use g_message to have the same logging behavior as
	previously.

2017-03-03  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/pluginscheduler.c (plugin_add): Check if dep_oid
	is not null to avoid a SIGSEGV may be due to a parse error.

2017-03-02  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/openvassd.c (struct openvassd_option openvassd_defaults):
	Add port 3389 and Services/irc to non_simult_ports config option,
	suggested by Christian Fischer.

2017-03-01  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/openvassd.c (set_daemon_mode): Call log_config_free in daemon mode
	for the parent process before exit.
	(init_openvassd): Remove dont_fork argument variable, since it is no
	longer required, because the log handler is always set.
	(main): Remove dont_fork variable from the argument list to call
	init_openvassd().

2017-03-01  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_text_utils.c (nasl_display): Use g_message instead of
	putchar.

2017-03-01  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_crypto.c (tls1_prf): Remove useless memory allocation
	and improve code style. Free allocated memory in case that md5 or sha1
	result is NULL before leaving the function.

2017-02-28  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_crypto2.c (nasl_aes128_gcm_encrypt)